using actions/exec

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://www.tinkurlab.com",
   "dependencies": {
     "@actions/core": "^1.1.1",
+    "@actions/exec": "^1.0.1",
     "@octokit/rest": "^16.28.7",
     "underscore": "^1.9.1"
   },
